VV - Import React and minor alignment fixes

--- a/src/components/NewExpense/NewExpenseForm.css
+++ b/src/components/NewExpense/NewExpenseForm.css
@@ -22,5 +22,8 @@
   }
   
   .new-expense__actions {
-    text-align: right;
+      text-align: right;
+      display: flex;
+      height: fit-content;
+      align-self: flex-end;
   }
